<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.froura.develo4.passenger.PhoneAuthentication">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/txtVw_enter_code"
        android:textColor="@color/textViewColor"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_verif_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVw_edit_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/et_hint_verification_code"
        android:maxLines="1"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtVw_mob_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/txtVw_mobNum_placeholder"
        android:textColor="@color/textViewColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtVw_edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVw_mob_num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txtVw_edit_number"
        android:textColor="@color/textLinkColor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Didn't receive it?" />

    <Button
        android:id="@+id/btn_verify"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_below="@+id/et_verif_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_verify"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtVw_request_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txtVw_request_code_placeholder"
        android:textColor="@color/textViewColor" />
</RelativeLayout>
